# GLDfish

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.updater  README.md  auto-updater.sh  comprehensive_stock_price_test.py  docker-compose.yml  final_stock_price_test.py  main.py  pyproject.toml  research_historic_endpoint.py  run.sh
src/: __init__.py  bot.py  chart_generator.py  data_fetcher.py  database.py  openrouter_client.py  utils.py
